--- a/Rad/literatura.bib
+++ b/Rad/literatura.bib
@@ -20,7 +20,7 @@
 }
 
 @article{surveillance,
-  author          = {Seckiner D Mallett X Maynard P Meuwly D Roux C},
+  author          = {Seckiner D and Mallett X and Maynard P and Meuwly D and Roux C},
   title           = {Forensic gait analysis - Morphometric assessment from surveillance footage},
   journal         = {Forensic science international},
   volume          = {296},
@@ -29,7 +29,7 @@
 }
 
 @article{VR,
-  author          = {Wei Fang Lianyu Zheng Huanjun Deng Hongbo Zhang},
+  author          = {Wei Fang and Lianyu Zheng and Huanjun Deng and Hongbo Zhang},
   title           = {Real-Time Motion Tracking for MobileAugmented/Virtual Reality Using AdaptiveVisual-Inertial Fusion},
   journal         = {Sensors},
   volume          = {},
@@ -38,14 +38,14 @@
 }
 
 @mastersthesis{android,
-  author          = {Antonio Bevilacqua Bingquan Huang Rob Argent Brian Caulfield Tahar Kechadi},
+  author          = {Antonio Bevilacqua and Bingquan Huang and Rob Argent and Brian Caulfield and Tahar Kechadi},
   title           = {Automatic Classification of Knee Rehabilitation Exercises Using a Single Inertial Sensor: a Case Study},
   school          = {Insight Centre for Data Analytics, University College of Dublin, Ireland},
   year            = {2018}
 }
 
 @article{exo,
-  author          = {Jun-Young Jung Wonho Heo Hyundae Yang and Hyunsub Park},
+  author          = {Jun-Young Jung and Wonho Heo and Hyundae Yang and Hyunsub Park},
   title           = {A Neural Network-Based Gait Phase Classification Method  Using Sensors Equipped on Lower Limb Exoskeleton Robots },
   journal         = {Sensors},
   volume          = {},
@@ -54,7 +54,7 @@
 }
 
 @article{LowerLimb,
-  author          = {Vincent Bonnet Vladimir Joukov Dana Kulić Philippe Fraisse Nacim Ramdani and Gentiane Venture},
+  author          = {Vincent Bonnet and Vladimir Joukov and Dana Kulić and Philippe Fraisse and Nacim Ramdani and Gentiane Venture},
   title           = {Monitoring of Hip and Knee Joint Angles Using a Single Inertial Measurement Unit During Lower Limb Rehabilitation},
   journal         = {Sensors},
   volume          = {16},
@@ -77,4 +77,57 @@
   title        = {Mini Data Capture},
   howpublished = {Github project},
   year         = {2018}
+}
+
+@article{zou2020gait,
+  title={Deep learning-based gait recogntion using smartphones in the wild},
+  author={Q. Zou and Y. Wang and Y. Zhao and Q. Wang and Q. Li},
+  journal={IEEE Transactions on Information Forensics and Security},
+  volume={15},
+  number={1},
+  pages={3197--3212},
+  year={2020},
+}
+
+@InProceedings{HuGaDB,
+  author={Roman Chereshnev 
+    and Attila Kert{\'e}sz-Farkas},
+  editor={van der Aalst Wil M P
+    and Ignatov Dmitry I
+    and Khachay Michael
+    and Kuznetsov Sergei O.
+    and Lempitsky Victor
+    and Lomazova Irina A.
+    and Loukachevitch Natalia
+    and Napoli Amedeo
+    and Panchenko Alexander
+    and Pardalos Panos M.
+    and Savchenko Andrey V.
+    and Wasserman Stanley},
+  title={HuGaDB: Human Gait Database for Activity Recognition from Wearable Inertial Sensor Networks},
+  booktitle={Analysis of Images, Social Networks and Texts},
+  year={2018},
+  publisher={Springer International Publishing},
+  address={Cham},
+  pages={131--141},
+  abstract={This paper presents a human gait data collection for analysis and activity recognition consisting of continues recordings of combined activities, such as walking, running, taking stairs up and down, sitting down, and so on; and the data recorded are segmented and annotated. Data were collected from a body sensor network consisting of six wearable inertial sensors (accelerometer and gyroscope) located on the right and left thighs, shins, and feet. Additionally, two electromyography sensors were used on the quadriceps (front thigh) to measure muscle activity. This database can be used not only for activity recognition but also for studying how activities are performed and how the parts of the legs move relative to each other. Therefore, the data can be used (a) to perform health-care-related studies, such as in walking rehabilitation or Parkinson's disease recognition, (b) in virtual reality and gaming for simulating humanoid motion, or (c) for humanoid robotics to model humanoid walking. This dataset is the first of its kind which provides data about human gait in great detail. The database is available free of charge https://github.com/romanchereshnev/HuGaDB.},
+  isbn={978-3-319-73013-4}
+}
+
+@article{uneven,
+  author          = {Yue Luo and Sarah Coppola and Philippe Dixon and Song Li and Jack Dennerlein and Boyi Hu},
+  title           = {A database of human gait performance on irregular and uneven surfaces collected by wearable sensors},
+  journal         = {Sci Data},
+  volume          = {7},
+  number          = {209},
+  year            = {2020}
+}
+
+@article{pressurePlate,
+  author          = {Brian Horsak and Djordje Slijepcevic and Anna-Maria Raberger and Caterine Schwab and Marianne Worisch and Matthias Zeppelzauer},
+  title           = {GaitRec, a large-scale ground reaction force dataset of healthy and impaired gait},
+  journal         = {Sci Data},
+  volume          = {7},
+  number          = {143},
+  year            = {2020}
 }
