--- a/Rad/literatura.bib
+++ b/Rad/literatura.bib
@@ -48,7 +48,7 @@
   author          = {Jun-Young Jung and Wonho Heo and Hyundae Yang and Hyunsub Park},
   title           = {A Neural Network-Based Gait Phase Classification Method  Using Sensors Equipped on Lower Limb Exoskeleton Robots },
   journal         = {Sensors},
-  volume          = {},
+  volume          = {15},
   number          = {},
   year            = {2015}
 }
